Exact Boolean Result is Wrong With Almost Coplanar Faces #82736

Closed
opened 2020-11-15 11:47:33 +01:00 by Philip Holzmann · 5 comments

System Information
Operating system: Windows 64 bit
Graphics card: Nvidia GTX 750 Ti

Blender Version
Broken: Blender 2.91 beta 9b54c81414, 2.92 alpha 194a57fd63

Short description of error
With the difference operation applied multiple times, if two meshes touch occupy almost the same space, the result may come out wrong.
This applies to both using the Self checkbox or not.

This bug has already been reported, and then closed here, with the note that the result is not a bug: https://developer.blender.org/T82047
I agree with the screenshot @howardt provided, but is different from what I observe.
Perhaps this is a platform dependent issue.

Exact steps for others to reproduce the error
Open the file. boolean_rotated_box2.blend

This is what I see:
boolean_rotated_box2.png

This is what you should, if the boolean worked correctly.

rotated.png

**System Information** Operating system: Windows 64 bit Graphics card: Nvidia GTX 750 Ti **Blender Version** Broken: Blender 2.91 beta 9b54c8141480, 2.92 alpha 194a57fd631f **Short description of error** With the difference operation applied multiple times, if two meshes touch occupy almost the same space, the result may come out wrong. This applies to both using the *Self* checkbox or not. This bug has already been reported, and then closed here, with the note that the result is not a bug: https://developer.blender.org/T82047 I agree with the screenshot @howardt provided, but is different from what I observe. Perhaps this is a platform dependent issue. **Exact steps for others to reproduce the error** Open the file. [boolean_rotated_box2.blend](https://archive.blender.org/developer/F9235317/boolean_rotated_box2.blend) This is what I see: ![boolean_rotated_box2.png](https://archive.blender.org/developer/F9241248/boolean_rotated_box2.png) This is what you *should*, if the boolean worked correctly. ![rotated.png](https://archive.blender.org/developer/F9240889/rotated.png)

Added subscribers: @howardt, @Foaly

Added subscribers: @howardt, @Foaly
Howard Trickey self-assigned this 2020-11-15 13:11:51 +01:00
Member

I was looking at this yesterday. It is hard to debug cases like this and maybe I need a better debugging technique, because I have to painfully manually map out 3d topology of intermediate results where things are so close that you can't see what is going on by just looking. I've already spent 6 hours on this bug. I will continue to look at this today but may end up giving up.
One actual, tangential issue, that I can fix is that the rotation matrix has some numbers that are < 1e-6 in them, which should be 0 for exactly 180 degrees of rotation. By cleaning those small numbers out of the matrix, the answer looks like it should for the first three applications of the difference, but then goes somewhat wrong on the last one. I'm trying to track that down first, as maybe it will be simpler to find that bug and maybe it is the same one.

I was looking at this yesterday. It is hard to debug cases like this and maybe I need a better debugging technique, because I have to painfully manually map out 3d topology of intermediate results where things are so close that you can't see what is going on by just looking. I've already spent 6 hours on this bug. I will continue to look at this today but may end up giving up. One actual, tangential issue, that I can fix is that the rotation matrix has some numbers that are < 1e-6 in them, which should be 0 for exactly 180 degrees of rotation. By cleaning those small numbers out of the matrix, the answer looks like it should for the first three applications of the difference, but then goes somewhat wrong on the last one. I'm trying to track that down first, as maybe it will be simpler to find that bug and maybe it is the same one.

This issue was referenced by fbffff26e4

This issue was referenced by fbffff26e437ad87b644762b340dcddc7ddf16ab
Member

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Member

I found a real bug (an extra triangle was output that should not have been), and also made it so that a rotation of 180 does what the user expects for the boolean modifier exact version. So the result no longer looks like the picture above, but rather what I think it was originally hoped to look like.
I hope I didn't just move the problem around. If it does come back, I hope it will be with a simpler example.

I found a real bug (an extra triangle was output that should not have been), and also made it so that a rotation of 180 does what the user expects for the boolean modifier exact version. So the result no longer looks like the picture above, but rather what I think it was originally hoped to look like. I hope I didn't just move the problem around. If it does come back, I hope it will be with a simpler example.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#82736
No description provided.